openshift.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: null
    generation: 1
    labels:
      app: pooltund
    name: pooltund
  spec:
    replicas: 2
    selector:
      app: pooltund
      deploymentconfig: pooltund
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftWebConsole
        creationTimestamp: null
        labels:
          app: pooltund
          deploymentconfig: pooltund
      spec:
        containers:
        - image: anroots/ctruman.info/AreWeRight@sha256:d2523c2fe6c4b3139e29e7f7fc385d385da88b21c7567f3431a83cf822b03c9f
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 2
          name: pooltund
          ports:
          - containerPort: 8080
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 8080
            timeoutSeconds: 2
          resources:
            limits:
              cpu: 200m
              memory: 100Mi
            requests:
              cpu: 50m
              memory: 20Mi
          terminationMessagePath: /dev/termination-log
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        securityContext: {}
        terminationGracePeriodSeconds: 30
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - pooltund
        from:
          kind: ImageStreamTag
          name: pooltund:latest
          namespace: improv-ee
      type: ImageChange
  status:
    availableReplicas: 0
    latestVersion: 0
    observedGeneration: 0
    replicas: 0
    unavailableReplicas: 0
    updatedReplicas: 0
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: null
    labels:
      app: pooltund
    name: pooltund
  spec:
    ports:
    - name: webserver
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      deploymentconfig: pooltund
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Route
  metadata:
    creationTimestamp: null
    name: pooltund
  spec:
    host: ctruman.info/AreWeRight
    port:
      targetPort: webserver
    to:
      kind: Service
      name: pooltund
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: 2017-05-27T10:42:05Z
        status: "True"
        type: Admitted
      host: ctruman.info/AreWeRight
      routerName: router
      wildcardPolicy: None
- apiVersion: v1
  kind: ImageStream
  metadata:
    annotations:
      openshift.io/image.dockerRepositoryCheck: 2017-05-27T10:41:08Z
    creationTimestamp: null
    generation: 3
    labels:
      app: pooltund
    name: pooltund
  spec:
    tags:
    - annotations:
        openshift.io/generated-by: OpenShiftWebConsole
        openshift.io/imported-from: anroots/ctruman.info/AreWeRight
      from:
        kind: DockerImage
        name: 172.30.192.131:5000/improv-ee/pooltund:latest
      generation: 3
      importPolicy: {}
      name: latest
      referencePolicy:
        type: Source
  status:
    dockerImageRepository: ""
kind: List
metadata: {}
